<resources>
    <string name="app_name">pr21_rmp_gudochkina</string>
    <string name="name">Имя:</string>
    <string name="enter_name">Введите имя</string>
    <string name="year_of_birth">Год рождения:</string>
    <string name="enter_year">Введите год</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="add_to_database">Добавить в базу данных</string>
    <string name="view_all_entries">Просмотреть все записи</string>
</resources>