<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity">

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="15dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:autofillHints="name"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameLabel" />

    <TextView
        android:id="@+id/yearLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="24dp"
        android:text="@string/year_of_birth"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/year"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_year"
        android:inputType="number"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearLabel"
        android:autofillHints="birthDate"/>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:onClick="save"
        android:text="@string/save"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/deleteButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/year" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#FF0000"
        android:onClick="delete"
        android:text="@string/delete"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/saveButton"
        app:layout_constraintTop_toBottomOf="@+id/year" />

</androidx.constraintlayout.widget.ConstraintLayout>